--- a/to-do.html
+++ b/to-do.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do Page</title>
 </head>
+
 <body>
     
+    <main>
+        <form>
+            <label for="userID">Department:</label>
+            <input id="userID" type="number" name="userID"><br><br>
+            <label for="category">category:</label>
+            <input id="category" type="text" name="category"><br><br>
+            <label for="description">Description:</label>
+            <input id="description" type="text" name="description"><br><br>
+            <label for="deadline">Deadline:</label>
+            <input id="deadline" type="number" name="deadline"><br><br>
+            <label for="priority">Priority:</label>
+            <input id="priority" type="text" name="priority"><br><br>
+        </form>
+    </main>
+
 </body>
+
 </html>
