add css to index.html and to-do.html

--- a/to-do.html
+++ b/to-do.html
@@ -6,15 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do Page</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    
+
+    <header>
+        <nav>
+            <a href="index.html">Main Page</a>
+            <a href="to-do.html">To Do</a>
+        </nav>
+    </header>
+
     <main>
+        <fieldset>
+            <select></select>
+        </fieldset>
+
         <form>
             <label for="userID">Department:</label>
             <input id="userID" type="number" name="userID"><br><br>
-            <label for="category">category:</label>
+            <label for="category">Category:</label>
             <input id="category" type="text" name="category"><br><br>
             <label for="description">Description:</label>
             <input id="description" type="text" name="description"><br><br>
