--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <a href="index.html">Main Page</a>
+            <a href="to-do.html">To Do</a>
+        </nav>
+    </header>
+    <main>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
+        </p>
+    </main>
+
 </body>
+
 </html>
