modify html tags in new-to-do.html and to-do.html and add css to to-do.html

--- a/new-to-do.html
+++ b/new-to-do.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="index.html">Main Page</a></li>
                 <li><a href="to-do.html">To Do</a></li>
+                <li><a href="new-to-do.html">Add To Do</a></li>
             </ul>
         </nav>
     </header>
@@ -25,6 +26,7 @@
         <h2 style="margin-left: 615px;">To Do List</h2>
 
         <fieldset style="margin-left: 400px;">
+            <legend>Select a Username</legend>
             <select></select>
         </fieldset>
 
@@ -37,7 +39,7 @@
                 <label for="description">Description:</label>
                 <input id="description" type="text" name="description"><br><br>
                 <label for="deadline">Deadline:</label>
-                <input id="deadline" type="number" name="deadline"><br><br>
+                <input id="deadline" type="date" name="deadline"><br><br>
                 <label for="priority">Priority:</label>
                 <input id="priority" type="text" name="priority"><br><br>
             </form>
