commit form tag in new-to-do.html and add 2 additional fieldsets on new-to-do.html

--- a/new-to-do.html
+++ b/new-to-do.html
@@ -30,7 +30,17 @@
             <select></select>
         </fieldset>
 
-        <fieldset style="margin-top: 10px; margin-left: 400px;">
+        <fieldset style="margin-left: 400px;">
+            <legend>Select</legend>
+            <select></select>
+        </fieldset>
+
+        <fieldset style="margin-left: 400px;">
+            <legend>Select</legend>
+            <select></select>
+        </fieldset>
+
+        <!-- <fieldset style="margin-top: 10px; margin-left: 400px;">
             <form>
                 <label for="userID">User id:</label>
                 <input id="userID" type="number" name="userID"><br><br>
@@ -43,7 +53,7 @@
                 <label for="priority">Priority:</label>
                 <input id="priority" type="text" name="priority"><br><br>
             </form>
-        </fieldset>
+        </fieldset> -->
 
         <div class="displayData">
             <p>userID: 123244</p>
