comment new to-do.js for testing if my js is working

--- a/to-do.html
+++ b/to-do.html
@@ -42,6 +42,6 @@
     <script src="./todo.js"></script>
 
 
-    <script src="new-to-do.js"></script>
+    <!-- <script src="new-to-do.js"></script> -->
 </body>
 </html>
