--- a/to-do.html
+++ b/to-do.html
@@ -29,12 +29,12 @@
             <select id="selectUsernames"><option value="" hidden element>Select</option></select>
         </fieldset>
 
-        <div class="displayData">
-            <p>userID: 123244</p>
+        <div id="displayData">
+            <!-- <p>userID: 123244</p>
             <p>Category: Computer Science</p>
             <p>Description: College Course</p>
             <p>Deadline: 1234</p>
-            <p>Priority: High</p>
+            <p>Priority: High</p> -->
         </div>
 
     </main>
