add id for to-do-html

--- a/to-do.html
+++ b/to-do.html
@@ -39,9 +39,9 @@
 
     </main>
 
-    <script src="./todo.js"></script>
+    <!-- <script src="./todo.js"></script> -->
 
 
-    <!-- <script src="new-to-do.js"></script> -->
+    <script src="new-to-do.js"></script>
 </body>
 </html>
