--- a/to-do.html
+++ b/to-do.html
@@ -26,7 +26,9 @@
         
         <fieldset style="margin-left: 400px;">
             <legend>Select a Username</legend>
-            <select id="selectUsernames"><option value="" hidden element>Select</option></select>
+            <select id="selectName">
+                <option hidden element>Select</option>
+            </select>
         </fieldset>
 
         <div class="displayData">
@@ -40,6 +42,6 @@
     </main>
 
 
-    <script src="new-to-do.js"></script>
+    <script src="to-do.js"></script>
 </body>
 </html>
