--- a/to-do.html
+++ b/to-do.html
@@ -39,9 +39,7 @@
 
     </main>
 
-    <!-- <script src="./todo.js"></script> -->
-
-
-    <script src="new-to-do.js"></script>
+    <!-- <script src="./scripts/to-do.js"></script> -->
+    <script src="./scripts/todo.js"></script>
 </body>
 </html>
