--- a/to-do.html
+++ b/to-do.html
@@ -26,7 +26,7 @@
         
         <fieldset style="margin-left: 400px;">
             <legend>Select a Username</legend>
-            <select id="selectName">
+            <select id="selectUsernames">
                 <option hidden element>Select</option>
             </select>
         </fieldset>
