change nav-bar css to all html pages

--- a/index.html
+++ b/index.html
@@ -10,26 +10,38 @@
 </head>
 
 <body>
-    <header>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Main Page</a></li>
-                    <li><a href="to-do.html">To Do</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header class="header">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="logo">
+                    <a href="index.html">Stay Organized</a>
+                </div>
+                <input type="checkbox" id="nav-check">
+                <label for="nav-check" class="nav-toggler">
+                    <span></span>
+                </label>
+                <nav class="nav">
+
+                    <ul>
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="to-do.html">To Do</a></li>
+                        <li><a href="new-to-do.html">Add To Do</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
     </header>
 
     <main>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
         </p>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
         </p>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio tenetur saepe ea id! Delectus itaque in iure consequatur vel nisi adipisci animi ut voluptates accusantium maxime ipsum blanditiis, totam quis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta, pariatur accusantium? Perferendis iste odio ea voluptatibus cum libero, cumque temporibus impedit. Repellat incidunt voluptatum exercitationem mollitia deleniti, dolore doloremque esse. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tempore sit eaque perspiciatis repellendus suscipit libero, at laboriosam incidunt laborum quos accusamus assumenda fugiat ipsam natus accusantium. Incidunt, quasi accusantium.
         </p>
     </main>
 
