adjust css for to-do display and new-to-do.html and change fieldset tag on to-do.html

--- a/to-do.html
+++ b/to-do.html
@@ -36,14 +36,14 @@
         <h2 style="margin-left: 615px;">To Do List</h2>
 
         
-        <fieldset style="margin-left: 400px;">
+        <fieldset style="margin-left: 425px;">
             <legend>Select a Username</legend>
             <select id="selectUsernames">
                 <option hidden element>Select</option>
             </select>
         </fieldset>
 
-        <div id="displayData">
+        <div id="displayData" class="displayData">
             <!-- <p>userID: 123244</p>
             <p>Category: Computer Science</p>
             <p>Description: College Course</p>
